--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-img{
+img {
     max-width: 100%;
 }
 
-body{
+body {
     font-family: serif;
 }
 
@@ -16,8 +16,9 @@ body{
     width: 190px;
     height: 100%;
 }
+
 .header-top {
-    background:#023B6D;
+    background: #023B6D;
 }
 
 .logo-and-main-menu-and-button {
@@ -29,20 +30,25 @@ body{
     padding: 10px 0px;
     align-items: center;
 }
+
 .logo-and-main-menu-and-button-background {
     background: #37517E;
 }
+
 .logo h1 a {
     text-decoration: none;
     color: white;
 }
+
 .main-menu ul {
     list-style: none;
 }
+
 .main-menu ul li {
     float: left;
     padding: 10px;
 }
+
 .main-menu ul li a {
     color: white;
     text-decoration: none;
@@ -65,6 +71,7 @@ body{
     align-items: center;
     color: white;
 }
+
 .main-body-section {
     width: 1020px;
     height: 390px;
@@ -72,6 +79,7 @@ body{
     display: flex;
     justify-content: space-between;
 }
+
 .main-body-section-1 {
     width: 48%;
     height: 100%;
@@ -93,6 +101,7 @@ body{
     line-height: 50px;
     font-family: serif;
 }
+
 .main-body-section-1 p {
     font-size: 24px;
     margin-top: 20px;
@@ -108,6 +117,7 @@ body{
     color: white;
     border: none;
 }
+
 .main-body-part-1 {
     background: #37517E;
     padding: 35px;
@@ -118,4 +128,122 @@ body{
     flex-direction: column;
     align-items: self-start;
     justify-content: center;
+}
+
+.menu-button button {
+    /* border-radius: 26px; */
+    /* padding: 10px 15px; */
+    /* border: 2px solid #47B2E4; */
+    background: none;
+    font-size: 15px;
+    border: navajowhite;
+}
+
+.menu-button button a {
+    text-decoration: none;
+    color: white;
+    padding: 10px;
+    border-radius: 26px;
+    display: inline-block;
+    border: 2px solid red;
+}
+
+.menu-button button a:hover {
+    background: red;
+}
+
+.main-body-part-2 {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    background: #F3F5FA;
+    margin-bottom: 60px;
+}
+
+.main-body-part-2-section {
+    width: 1020px;
+    height: 100%;
+    margin: auto;
+}
+
+.logo-main-body-part-2-section {
+    width: 16%;
+    height: 100%;
+    /* background: red; */
+
+}
+
+.main-body-part-2-section {
+    width: 1020px;
+    height: 100%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo-main-body-part-2-section img {
+    padding: 15px 40px;
+    transition: all 0.5s;
+}
+
+.logo-main-body-part-2-section img {
+    filter: grayscale(100);
+}
+.logo-main-body-part-2-section img:hover {
+    filter: none;
+    transform: scale(1.5);
+}
+.about-us {width: 100%;
+    text-align: center;
+    margin-bottom: 60px;
+
+}
+
+.about-us-main-box {
+    width: 1020px;
+    height: auto;
+    overflow: hidden;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+}
+.about-us-part {
+    width: 48%;
+    height: auto;
+}
+.learn-button {
+    margin-top: 15px;
+}
+.learn-button button {
+    padding: 10px 15px;
+    background: none;
+    color: dodgerblue;
+    border: 2px solid dodgerblue;
+}
+
+.learn-button button:hover {
+    background: dodgerblue;
+    color: white;
+}
+.learn-button button {
+    transition: all 0.5s;
+    border-radius: 10px;
+}
+.main-body-part-3 {
+    margin-bottom: 80px;
+
+}
+.about-us h1 {
+    text-transform: uppercase;
+    color: cadetblue;
+}
+.main-menu ul li a:hover {
+    color: red;
+}
+.about-us h1 {
+    border-bottom: 1px solid red;
+    width: fit-content;
+    text-align: center;
+    margin: auto;
 }
