--- a/style.css
+++ b/style.css
@@ -190,11 +190,14 @@ body {
 .logo-main-body-part-2-section img {
     filter: grayscale(100);
 }
+
 .logo-main-body-part-2-section img:hover {
     filter: none;
     transform: scale(1.5);
 }
-.about-us {width: 100%;
+
+.about-us {
+    width: 100%;
     text-align: center;
     margin-bottom: 60px;
 
@@ -208,13 +211,16 @@ body {
     display: flex;
     justify-content: space-between;
 }
+
 .about-us-part {
     width: 48%;
     height: auto;
 }
+
 .learn-button {
     margin-top: 15px;
 }
+
 .learn-button button {
     padding: 10px 15px;
     background: none;
@@ -226,24 +232,132 @@ body {
     background: dodgerblue;
     color: white;
 }
+
 .learn-button button {
     transition: all 0.5s;
     border-radius: 10px;
 }
+
 .main-body-part-3 {
     margin-bottom: 80px;
 
 }
+
 .about-us h1 {
     text-transform: uppercase;
     color: cadetblue;
 }
+
 .main-menu ul li a:hover {
     color: red;
 }
+
 .about-us h1 {
     border-bottom: 1px solid red;
     width: fit-content;
     text-align: center;
+    margin: auto;
+}
+
+.main-body-part-4 {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    background: #F3F5FA;
+    padding: 100px 0;
+}
+
+.main-body-part-4-box {
+    width: 1020px;
+    height: auto;
+    overflow: hidden;
+    /* background: yellow; */
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+}
+
+.main-body-part-4-box-section {
+    width: 50%;
+}
+
+.main-body-part-4-box-section {
+    padding: 20px;
+}
+
+.main-body-part-4-box-section h1 {
+    margin-bottom: 15px;
+    color: #37517E;
+    font-weight: normal;
+}
+
+.q-box-item {
+    margin: 20px;
+}
+
+.q-box-item {
+    background: white;
+    padding: 10px;
+}
+
+.main-body-part-4-box-section {
+    margin: auto;
+}
+
+.font-weight-bolt {
+    font-weight: bold;
+}
+
+.q-box-item h2 {
+    font-size: 20px;
+}
+
+.font-weight-bold {
+    font-weight: bold;
+}
+
+.main-body-part-5 {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    padding: 20px;
+}
+.main-body-part-5-box {
+    width: 1020px;
+    height: auto;
+    margin: auto;
+}
+
+.heading {
+    text-align: center;
+    padding-bottom: 25px;
+}
+
+.small-logo-describe {
+    width: 23%;
+    height: auto;
+    overflow: hidden;
+    background:#F3F5FA;
+    padding: 25px 15px;
+    justify-items: center;
+}
+
+.part-5-box-section-2 {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.details p {
+    text-align: center;
+    font-size: 16px;
+}
+.small-logo-describe h2 {
+    margin-bottom: 15px;
+}
+
+.heading h1 {
+    border-bottom: 2px solid red;
+    width: fit-content;
     margin: auto;
 }
