--- a/style.css
+++ b/style.css
@@ -427,12 +427,13 @@ body {
 }
 .portfolio-item-2 ul li a {
     text-decoration: none;
+    padding: 8px 10px;
 }
-.portfolio-item-2 ul li a {text-decoration: none;}
+
 
 .portfolio-item-2 ul li {
     display: inline-block;
-    padding: 8px 10px;
+    /* padding: 8px 10px; */
     font-size: 20px;
     border-radius: 50px;
 }
@@ -444,7 +445,6 @@ body {
 .portfolio-item-2 ul li a:hover {
     background: aqua;
     border-radius: 50px;
-    padding: 6px 15px;
     transition: all 0.3s;
 }
 .main-body-part-6 {
@@ -453,7 +453,7 @@ body {
 .portfolio-item-3 {
     width: 1020px;
     height: auto;
-    background: red;
+    /* background: red; */
     display: flex;
     flex-wrap: wrap;
     margin-left: -3%;
@@ -461,9 +461,87 @@ body {
 .portfolio-item-3-part {
     width: 30.33%;
     height: auto;
-    border: 2px solid green;
+    /* border: 2px solid green; */
     margin-left: 3%;
 }
 .portfolio-item-2 {
     margin-bottom: 20px;
+}
+.portfolio-item-3-part {
+    position: relative;
+}
+.portfolio-caption {
+    position: absolute;
+    bottom: 0;
+    background: rgba(55, 81, 126, 0.8);
+    width: 100%;
+    opacity: 0;
+    transition: all 0.5s;
+}
+
+.portfolio-item-3-part:hover .portfolio-caption {
+    opacity: 1;
+}
+.portfolio-caption-matter {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 10px;
+}
+.portfolio-caption-matter-item h2 {
+    font-size: 20px;
+    color: white;
+    padding: 10px;
+}
+.portfolio-caption-matter-item .icon-item {
+    font-size: 20px;
+    color: white;
+    padding: 10px;
+}
+
+.portfolio-caption-matter-item {
+    display: flex;
+}
+.portfolio-caption-matter-item h2 span {
+    display: block;
+    font-size: 15px;
+}
+.portfolio-item-3-part {
+    margin-bottom: 2%;
+}
+
+.division {
+    background: green;
+    width: 1020px;
+    height: 500px;
+    margin: auto;
+    position: relative;
+}
+.division-item {
+    width: 200px;
+}
+
+.division-item:nth-child(1) {
+    position: absolute;
+    left: 0;
+    top: 0;
+    border: 2px solid red;
+}
+
+.division-item:nth-child(2) {
+    position: absolute;
+    right: 0;
+    top: 0;
+    border: 2px solid gray;
+}
+.division-item:nth-child(3) {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    border: 2px solid yellow;
+}
+.division-item:last-child {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    border: 2px solid red;
 }
