--- a/style.css
+++ b/style.css
@@ -707,6 +707,7 @@ span {
     padding: 15px;
     box-shadow: 0 0 15px #555;
     background: white;
+    border-radius: 6px;
 }
 label {
     display: block;
@@ -717,4 +718,7 @@ label {
 .group-field {
     display: flex;
     flex-wrap: wrap;
+}
+.section-contact-row-2 {
+    padding: 10px;
 }
