--- a/style.css
+++ b/style.css
@@ -424,6 +424,9 @@ body {
     text-transform: uppercase;
     margin-bottom: 15px;
     border-bottom: 2px solid red;
+    width: fit-content;
+    text-align: center;
+    display: inline-block;
 }
 .portfolio-item-2 ul li a {
     text-decoration: none;
@@ -722,3 +725,221 @@ label {
 .section-contact-row-2 {
     padding: 10px;
 }
+.name-field {
+    width: 48%;
+    margin-right: 4%;
+}
+.email-field {
+    width: 48%;
+}
+textarea#message,
+input#Subject,
+input#Your_Email,
+input#Your_Name {
+    width: 100%;
+    padding: 8px 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+.subject,
+.group-field {
+    margin-bottom: 20px;
+}
+input#Send_message {
+    font-size: 15px;
+    padding: 8px 10px;
+    border: none;
+    border-radius: 30px;
+    background: #47B2E4;
+    color: white;
+    width: 130px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
+}
+textarea#message {
+    height: 230px;
+}
+.join-our-newsletter-box {
+    width: 1020px;
+    height: auto;
+    margin: auto;
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.newsletter-title h2 {
+    margin-bottom: 20px;
+    color: #375192;
+    font-size: 26px;
+    font-family: sans-serif;
+}
+.newsletter-title p {
+    margin-bottom: 40px;
+}
+.subscribe-bar {
+    width: 475px;
+    background:white;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    margin: auto;
+    border-radius: 20px;
+}
+.subscribe-bar button {
+    padding: 10px 15px;
+    border: none;
+    border-radius: 18px;
+    background: cornflowerblue;
+    font-size: 17px;
+}
+.section-ten {
+    width: 100%;
+    background: #F3F5FA;
+    height: auto;
+    overflow: hidden;
+    margin-top: 20px;
+}
+.subscribe-bar button a {
+    text-decoration: none;
+    color: white;
+    display: block;
+}
+.Asked-ques.title {
+    width: 1020px;
+    height: auto;
+    overflow: hidden;
+    margin: auto;
+    text-align: center;
+}
+.Asked-ques.title h2 {
+    margin-bottom: 20px;
+    border-bottom: 2px solid royalblue;
+    width: fit-content;
+    text-align: center;
+    display: inline-block;
+    font-family: "Poppins", sans-serif;
+    color: #37517e;
+}
+.Asked-ques.title {
+    margin-bottom: 40px;
+    margin-top: 50px;
+}
+.question-items {
+    width: 800px;
+    height: auto;
+    overflow: hidden;
+    margin: auto;
+    background: white;
+    margin-bottom: 20px;
+    padding: 10px;
+}
+.question-items a {
+    text-decoration: none;
+    font-size: 20px;
+    font-family: "Poppins", sans-serif;
+}
+.question-items h4 a:hover {
+    color: cornflowerblue;
+    transition: all 0.5s;
+}
+.section-eight {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    background: #F3F5FA;
+}
+.price-box {
+    width: 1020px;
+    height: auto;
+    overflow: hidden;
+    margin: auto;
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+.price-title h2 {
+    color: #37517e;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-decoration: underline;
+    font-size: 32px;
+}
+.price-plan-part {
+    width: 30.33%;
+    background: white;
+    height: auto;
+    overflow: hidden;
+}
+.price-plan-part {
+    text-align: left;
+    padding: 50px 20px;
+    margin-left: 3%;
+}
+.price-plan-part h3 {font-size: 25px;margin-bottom: 15px;}
+
+.price-plan-part h3 {
+    color: #37517e;
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;}
+
+.price-plan-part h4 span {
+    color: #37517e;
+    font-family: "Poppins", sans-serif;
+    font-size: xxx-large;
+    font-weight: 500;}
+    
+.price-plan-part p span {
+        color: blue;
+        margin-right: 8px;
+        font-size: 20px;
+    }
+
+.price-plan-part p {
+        margin-bottom: 20px;
+        color: cadetblue;
+    }
+.price-plan-part h5 {
+        color: blueviolet;
+        font-size: 18px;
+        margin-bottom: 30px;
+    }
+
+.price-plan {
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: -3%;
+        padding: 10px;
+        
+    }
+    .price-title {
+        margin-bottom: 50px;
+        width: 100%;
+        height: auto;
+        overflow: hidden;
+    }
+    .price-plan-part {
+        box-shadow: 0 0 15px #555;
+    }
+
+    .price-plan-part:nth-child(2) {
+        border-top: 6px solid #001fff;
+        border-bottom: 6px solid #001fff;
+        border-radius: 10px;
+    }
+
+    .price-plan-part button {
+        padding: 10px 15px;
+        background: cornflowerblue;
+        color: white;
+        border: blue;
+        border-radius: 20px;
+        font-size: 15px;
+        margin: auto;
+        width: 114px;
+        text-align: center;
+        display: flex;
+        margin-top: 30px;
+    }
